--- a/initproject/sidebar/package.json
+++ b/initproject/sidebar/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "element-ui": "^2.13.0",
+    "element-ui": "~2.13.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
@@ -18,7 +18,6 @@
     "@vue/cli-service": "^4.2.0",
     "vue-template-compiler": "^2.6.11"
   },
-  
   "browserslist": [
     "> 1%",
     "last 2 versions"
