--- a/initproject/sidebar/package.json
+++ b/initproject/sidebar/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "sidebar",
-  "version": "0.1.0",
-  "private": true,
+  "name": "basic-sidebar",
+  "version": "0.1.6",
+  "private": false,
+  "main": "./lib/basic-sidebar.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name basic-sidebar --dest lib ./packages/sidebar/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "~2.13.0",
+    "sidebar": "^1.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
